# Token_Tracker

./: INSTALL.md  README.md  build.sh
.claude/: settings.json
.github/workflows/: release.yml
token-tracker/: index.html  package-lock.json  package.json  popup.html  settings.html  vite.config.ts
token-tracker/.github/workflows/: release.yml
token-tracker/doc/ui/: Token Appetite Panel.dc.html  Token Appetite Settings.dc.html
token-tracker/src/: index.css
token-tracker/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
token-tracker/src-tauri/capabilities/: default.json
token-tracker/src-tauri/migrations/: 001_initial.sql
token-tracker/src-tauri/src/: db.rs  keychain.rs  lib.rs  license.rs  main.rs  models.rs  poller.rs  pricing.rs
token-tracker/src-tauri/src/commands/: mod.rs  providers.rs  settings.rs  sync.rs  usage.rs
token-tracker/src-tauri/src/providers/: chatgpt_web.rs  claude_code.rs  claude_web.rs  mod.rs  openai.rs  openrouter.rs
token-tracker/src/components/: ClaudeStatus.tsx  ProviderCard.tsx  QuickLinksSection.tsx  SubscriptionsList.tsx  WeeklyChart.tsx
token-tracker/src/components/settings/: AboutPanel.tsx  BudgetsPanel.tsx  DisplayPanel.tsx  LicensePanel.tsx  NotificationsPanel.tsx  ProvidersPanel.tsx  QuickLinksPanel.tsx  Sidebar.tsx  SubscriptionCard.tsx  SubscriptionsPanel.tsx
token-tracker/src/hooks/: usePolling.ts
token-tracker/src/lib/: api.ts  types.ts
token-tracker/src/store/: popup.ts  settings.ts
token-tracker/src/windows/popup/: App.tsx
token-tracker/src/windows/settings/: App.tsx  main.tsx
